fix merge + tests
Signed-off-by: basseche <bassel.el-cheikh_externe@rte-france.com>