@@ -8,6 +8,7 @@ import org.assertj.core.api.WithAssertions;
 import org.assertj.core.api.junit.jupiter.SoftAssertionsExtension;
 import org.gridsuite.network.map.dto.common.CurrentLimitsData;
 import org.gridsuite.network.map.dto.common.CurrentLimitsData.Applicability;
+import org.gridsuite.network.map.dto.common.LimitsProperty;
 import org.gridsuite.network.map.dto.common.TemporaryLimitData;
 import org.gridsuite.network.map.dto.utils.MockDto;
 import org.gridsuite.network.map.dto.utils.MockDto.CurrentLimitsDtoTest;
@@ -24,6 +25,7 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import javax.annotation.Nullable;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Function;
@@ -57,7 +59,9 @@ class BranchInfosMapperTest implements WithAssertions {
          */
 
         @SafeVarargs
-        private CurrentLimitsData testResult(final String id, @Nullable final Double permanentLimit, @Nullable final Triple<String, Double, Integer>... temporaryLimits) {
+        private CurrentLimitsData testResult(final String id, @Nullable final Double permanentLimit,
+                                             @Nullable final List<LimitsProperty> limitsProperties,
+                                             @Nullable final Triple<String, Double, Integer>... temporaryLimits) {
             final var dtoMocks = MockDto.buildOperationalLimitsGroup(true, id, permanentLimit, temporaryLimits);
             final TemporaryLimitDtoTest tlMock = CollectionUtils.isEmpty(dtoMocks.getRight()) ? null : dtoMocks.getRight().getFirst();
             if (tlMock != null) {
@@ -76,6 +80,7 @@ class BranchInfosMapperTest implements WithAssertions {
                 Mockito.verify(olgMock, Mockito.times(permanentLimit == null ? 1 : 2)).getCurrentLimits();
                 if (permanentLimit != null) {
                     Mockito.verify(olgMock).getId();
+                    Mockito.verify(olgMock, Mockito.times(CollectionUtils.isEmpty(limitsProperties) ? 1 : 2)).getPropertyNames();
                     Mockito.verify(clMock, Mockito.times(Double.isNaN(permanentLimit) ? 1 : 2)).getPermanentLimit();
                     Mockito.verify(clMock, Mockito.times(ArrayUtils.isEmpty(temporaryLimits) ? 1 : 2)).getTemporaryLimits();
                     if (ArrayUtils.isNotEmpty(temporaryLimits)) {
@@ -92,62 +97,66 @@ class BranchInfosMapperTest implements WithAssertions {
         @Order(1)
         void nullInput() {
             // null -> null
-            assertThat(testResult(null, null, (Triple<String, Double, Integer>[]) null)).isNull();
+            assertThat(testResult(null, null, null, (Triple<String, Double, Integer>[]) null)).isNull();
         }
 
         @Test
         @Order(2)
         void emptyCurrentLimits() {
             // OLG("id", null) -> null
-            assertThat(testResult("id", null /*,new Triple[0]*/)).isNull();
+            assertThat(testResult("id", null, Collections.emptyList() /*,new Triple[0]*/)).isNull();
         }
 
         @Test
         @Order(3)
         void nanPermLimitAndNullTempLimit() {
             // OLG("id", CL(NaN, null)) -> null
-            assertThat(testResult("id", Double.NaN, (Triple<String, Double, Integer>[]) null)).isNull();
+            assertThat(testResult("id", Double.NaN, Collections.emptyList(), (Triple<String, Double, Integer>[]) null)).isNull();
         }
 
         @Test
         @Order(4)
         void nanPermLimitAndEmptyTempLimit() {
             // OLG("id", CL(NaN, [])) -> null
-            assertThat(testResult("id", Double.NaN /*,new Triple[0]*/)).isNull();
+            assertThat(testResult("id", Double.NaN, Collections.emptyList() /*,new Triple[0]*/)).isNull();
         }
 
         @Test
         @Order(5)
         void nanPermLimitAndNonEmptyTempLimit() {
             // OLG("my id", CL(Nan, [TL("testLimit", 456.789, 123)])) -> CLD("my id", null, [TLD("testLimit", 456.789, 123)], null)
-            assertThat(testResult("my id", Double.NaN, Triple.of("testLimit", 456.789, 123)))
+            assertThat(testResult("my id", Double.NaN, Collections.emptyList(), Triple.of("testLimit", 456.789, 123)))
                 .isEqualTo(CurrentLimitsData.builder().id("my id").applicability(null).permanentLimit(null).temporaryLimits(
-                    List.of(TemporaryLimitData.builder().acceptableDuration(123).name("testLimit").value(456.789).build())).build());
+                    List.of(TemporaryLimitData.builder().acceptableDuration(123).name("testLimit").value(456.789).build()))
+                    .limitsProperties(Collections.emptyList()).build());
         }
 
         @Test
         @Order(6)
         void nonNanPermLimitAndNullTempLimit() {
             // OLG("my id", CL(0.123, null)) -> CLD("my id", 0.123, null, null)
-            assertThat(testResult("my id", 0.123, (Triple<String, Double, Integer>[]) null))
-                .isEqualTo(CurrentLimitsData.builder().id("my id").applicability(null).permanentLimit(0.123).temporaryLimits(null).build());
+            assertThat(testResult("my id", 0.123, Collections.emptyList(), (Triple<String, Double, Integer>[]) null))
+                .isEqualTo(CurrentLimitsData.builder().id("my id").applicability(null).permanentLimit(0.123).temporaryLimits(null)
+                    .limitsProperties(Collections.emptyList()).build());
         }
 
         @Test
         @Order(7)
         void nonNanPermLimitAndEmptyTempLimit() {
             // OLG("my id", CL(0.123, [])) -> CLD("my id", 0.123, [], null)
-            assertThat(testResult("my id", 0.123 /*,new Triple[0]*/))
-                .isEqualTo(CurrentLimitsData.builder().id("my id").applicability(null).permanentLimit(0.123).temporaryLimits(null).build());
+            assertThat(testResult("my id", 0.123, Collections.emptyList() /*,new Triple[0]*/))
+                .isEqualTo(CurrentLimitsData.builder().id("my id").applicability(null).permanentLimit(0.123)
+                    .temporaryLimits(null).limitsProperties(Collections.emptyList()).build());
         }
 
         @Test
         @Order(8)
         void nonNanPermLimitAndNonEmptyTempLimit() {
             // OLG("my id", CL(0.0, [TL("testLimit", 456.789, 123)])) -> CLD("my id", 0.0, [TLD("testLimit", 456.789, 123)], null)
-            assertThat(testResult("my id", 0.0, Triple.of("testLimit", 456.789, 123)))
+            assertThat(testResult("my id", 0.0, Collections.emptyList(), Triple.of("testLimit", 456.789, 123)))
                 .isEqualTo(CurrentLimitsData.builder().id("my id").applicability(null).permanentLimit(0.0).temporaryLimits(
-                    List.of(TemporaryLimitData.builder().acceptableDuration(123).name("testLimit").value(456.789).build())).build());
+                    List.of(TemporaryLimitData.builder().acceptableDuration(123).name("testLimit").value(456.789).build()))
+                    .limitsProperties(Collections.emptyList()).build());
         }
     }
 
@@ -167,6 +176,7 @@ class BranchInfosMapperTest implements WithAssertions {
                 TemporaryLimitData.builder().acceptableDuration(100).name("temporary1").value(50.0).build(),
                 TemporaryLimitData.builder().acceptableDuration(150).name("temporary2").value(70.0).build()
             )).applicability(isSide1or2 == null ? Applicability.EQUIPMENT : (isSide1or2 ? Applicability.SIDE1 : Applicability.SIDE2))
+                .limitsProperties(Collections.emptyList())
             .build();
         }
 
